--- a/lang/lang_address-nb_NO.po
+++ b/lang/lang_address-nb_NO.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-09-07 13:21+0100\n"
+"POT-Creation-Date: 2018-10-18 15:22+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Martin Fors\n"
 "Language-Team: \n"
@@ -15,9 +15,6 @@ msgstr ""
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-msgid "Add"
-msgstr "Legg til"
-
 msgid "First Name"
 msgstr "Fornavn"
 
@@ -26,6 +23,12 @@ msgstr "Etternavn"
 
 msgid "E-mail"
 msgstr "E-post"
+
+msgid "Add"
+msgstr "Legg til"
+
+msgid "Unknown"
+msgstr "Ukjent"
 
 msgid "Add New"
 msgstr "Legg Til Ny"
@@ -42,8 +45,8 @@ msgstr "Alle"
 msgid "Name"
 msgstr "Navn"
 
-msgid "Unknown"
-msgstr "Ukjent"
+msgid "Contact"
+msgstr "Kontakt"
 
 msgid "Edit"
 msgstr "Redigere"
