Simplify saving profile update

--- a/lang/lang_address-da_DK.po
+++ b/lang/lang_address-da_DK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-17 09:44+0100\n"
+"POT-Creation-Date: 2019-09-18 09:41+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Martin Fors\n"
 "Language-Team: \n"
@@ -30,6 +30,9 @@ msgstr "Tilføj"
 msgid "Settings"
 msgstr "Indstillinger"
 
+msgid "Public"
+msgstr "Offentlig"
+
 msgid "Address"
 msgstr "Adresse"
 
@@ -53,6 +56,9 @@ msgstr "Vælg her"
 
 msgid "All"
 msgstr "Alle"
+
+msgid "Trash"
+msgstr "Affald"
 
 msgid "Name"
 msgstr "Navn"
