--- a/lang/lang_address-nb_NO.po
+++ b/lang/lang_address-nb_NO.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-22 09:52+0100\n"
+"POT-Creation-Date: 2019-10-10 08:45+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Martin Fors\n"
 "Language-Team: \n"
@@ -21,6 +21,12 @@ msgstr "Adressebok"
 msgid "Information"
 msgstr "Informasjon"
 
+msgid "Member ID"
+msgstr "Medlems ID"
+
+msgid "Social Security Number"
+msgstr "Social Security-Nummer"
+
 msgid "First Name"
 msgstr "Fornavn"
 
@@ -33,6 +39,9 @@ msgstr "Telefonnummer"
 msgid "Mobile Number"
 msgstr "Mobilnummer"
 
+msgid "Work Number"
+msgstr "Arbeid Nummer"
+
 msgid "E-mail"
 msgstr "E-post"
 
@@ -41,6 +50,9 @@ msgstr "Oppdatere"
 
 msgid "Add"
 msgstr "Legg til"
+
+msgid "Created %s"
+msgstr "Opprettet %s"
 
 msgid "Settings"
 msgstr "Innstillinger"
@@ -63,17 +75,71 @@ msgstr "Importere"
 msgid "Unknown"
 msgstr "Ukjent"
 
+msgid "Use Master Table on All Sites"
+msgstr "Bruk Master Bord på Alle Områder"
+
+msgid "Name for Extra Address Field"
+msgstr "Navn for Ekstra Adresse-Feltet"
+
+msgid "Display Settings for Extra in Profile"
+msgstr "Display Innstillinger for Ekstra i Profil"
+
+msgid "Display Member ID"
+msgstr "Vise Medlems ID"
+
+msgid "List"
+msgstr "Listen"
+
 msgid "Add New"
 msgstr "Legg Til Ny"
+
+msgid "Address Permissions to Users"
+msgstr "Adresse Tillatelser til Brukere"
+
+msgid "Part of Group"
+msgstr "En del av Konsernet"
 
 msgid "Accepted"
 msgstr "Akseptert"
 
+msgid "I could not merge the addresses for you because only public addresses are possible to merge"
+msgstr "Jeg kunne ikke slå sammen adresser for deg fordi det bare er offentlige adresser er mulig å slå sammen"
+
+msgid "The addresses have been merged succesfully"
+msgstr "Adressene har blitt slått sammen med suksess"
+
+msgid "You have to choose at least two addresses to merge"
+msgstr "Du må velge minst to adresser for å slå sammen"
+
+msgid "The information was not submitted, contact an admin if this persists"
+msgstr "Informasjonen ble ikke sendt inn, ta kontakt med en admin hvis dette vedvarer"
+
 msgid "The address was deleted"
 msgstr "Adressen ble slettet"
 
+msgid "The address already exists in the group"
+msgstr "Adressen allerede finnes i konsernet"
+
 msgid "The address was removed from the group"
 msgstr "Adressen ble fjernet fra gruppen"
+
+msgid "The address has been manually accepted"
+msgstr "Adressen er manuelt godkjent"
+
+msgid "I could not manually accept the address for you"
+msgstr "Jeg kunne ikke manuelt godta adresse"
+
+msgid "The message was sent"
+msgstr "Meldingen ble sendt"
+
+msgid "I could not send the message for you"
+msgstr "Jeg kunne ikke sende melding til deg"
+
+msgid "The address was created"
+msgstr "Adressen ble opprettet"
+
+msgid "The address was updated"
+msgstr "Adressen ble oppdatert"
 
 msgid "Choose Here"
 msgstr "Velg Her"
@@ -87,29 +153,95 @@ msgstr "Amerikansk Samoa"
 msgid "Antarctica"
 msgstr "Antarktis"
 
+msgid "Antigua and Barbuda"
+msgstr "Antigua og Barbuda"
+
 msgid "Austria"
 msgstr "Østerrike"
+
+msgid "Azerbaijan"
+msgstr "Aserbajdsjan"
+
+msgid "Belarus"
+msgstr "Hviterussland"
+
+msgid "Belgium"
+msgstr "Belgia"
+
+msgid "Bosnia and Herzegowina"
+msgstr "Bosnia og Herzegowina"
+
+msgid "Bouvet Island"
+msgstr "Bouvetøya"
+
+msgid "Brazil"
+msgstr "Brasil"
+
+msgid "British Indian Ocean Territory"
+msgstr "Det Britiske Territoriet I Indiahavet"
+
+msgid "Cambodia"
+msgstr "Kambodsja"
 
 msgid "Cameroon"
 msgstr "Kamerun"
 
+msgid "Cayman Islands"
+msgstr "Cayman-Øyene"
+
+msgid "Central African Republic"
+msgstr "Den Sentralafrikanske Republikk"
+
+msgid "Chad"
+msgstr "Tsjad"
+
 msgid "China"
 msgstr "Kina"
+
+msgid "Cocos (Keeling) Islands"
+msgstr "Cocos (Keeling) Øyene"
+
+msgid "Comoros"
+msgstr "Komorene"
 
 msgid "Congo"
 msgstr "Kongo"
 
+msgid "Cook Islands"
+msgstr "Cook-Øyene"
+
+msgid "Cote D'Ivoire"
+msgstr "Elfenbenskysten"
+
 msgid "Croatia"
 msgstr "Kroatia"
 
+msgid "Cyprus"
+msgstr "Kypros"
+
+msgid "Czech Republic"
+msgstr "Tsjekkia"
+
 msgid "Denmark"
 msgstr "Danmark"
+
+msgid "Dominican Republic"
+msgstr "Den Dominikanske Republikk"
+
+msgid "East Timor"
+msgstr "Øst-Timor"
+
+msgid "Equatorial Guinea"
+msgstr "Ekvatorial-Guinea"
 
 msgid "Estonia"
 msgstr "Estland"
 
 msgid "Ethiopia"
 msgstr "Etiopia"
+
+msgid "Faroe Islands"
+msgstr "Færøyene"
 
 msgid "France"
 msgstr "Frankrike"
@@ -123,14 +255,29 @@ msgstr "Fransk Guyana"
 msgid "French Polynesia"
 msgstr "Fransk Polynesia"
 
+msgid "French Southern Territories"
+msgstr "Franske Sørlige Territorier"
+
 msgid "Germany"
 msgstr "Tyskland"
+
+msgid "Greece"
+msgstr "Hellas"
 
 msgid "Greenland"
 msgstr "Grønland"
 
+msgid "Heard and Mc Donald Islands"
+msgstr "Hørt og Mc Donald-Øyene"
+
+msgid "Hungary"
+msgstr "Ungarn"
+
 msgid "Iceland"
 msgstr "Island"
+
+msgid "Iran (Islamic Republic of)"
+msgstr "Iran (Islamske Republikken)"
 
 msgid "Iraq"
 msgstr "Irak"
@@ -141,11 +288,23 @@ msgstr "Irland"
 msgid "Italy"
 msgstr "Italia"
 
+msgid "Kazakhstan"
+msgstr "Kasakhstan"
+
+msgid "Korea, Republic of"
+msgstr "Korea, Republikken"
+
+msgid "Kyrgyzstan"
+msgstr "Kirgisistan"
+
 msgid "Lebanon"
 msgstr "Libanon"
 
 msgid "Lithuania"
 msgstr "Litauen"
+
+msgid "Macedonia, The Former Yugoslav Republic of"
+msgstr "Makedonia, Den Tidligere Jugoslaviske Republikken"
 
 msgid "Madagascar"
 msgstr "Madagaskar"
@@ -153,23 +312,137 @@ msgstr "Madagaskar"
 msgid "Maldives"
 msgstr "Maldivene"
 
+msgid "Marshall Islands"
+msgstr "Marshall-Øyene"
+
+msgid "Micronesia, Federated States of"
+msgstr "Mikronesia"
+
+msgid "Moldova, Republic of"
+msgstr "Moldova, Republikken"
+
 msgid "Morocco"
 msgstr "Marokko"
+
+msgid "Mozambique"
+msgstr "Mosambik"
 
 msgid "Netherlands"
 msgstr "Nederland"
 
+msgid "Netherlands Antilles"
+msgstr "De Nederlandske Antillene"
+
+msgid "New Caledonia"
+msgstr "Ny-Caledonia"
+
 msgid "Norway"
 msgstr "Norge"
+
+msgid "Papua New Guinea"
+msgstr "Papua Ny-Guinea"
+
+msgid "Philippines"
+msgstr "Filippinene"
 
 msgid "Poland"
 msgstr "Polen"
 
+msgid "Russian Federation"
+msgstr "Russiske Føderasjonen"
+
+msgid "Saint Kitts and Nevis"
+msgstr "Saint Kitts og Nevis"
+
+msgid "Saint Vincent and the Grenadines"
+msgstr "Saint Vincent og Grenadinene"
+
+msgid "Sao Tome and Principe"
+msgstr "Sao Tome og Principe"
+
+msgid "Saudi Arabia"
+msgstr "Saudi-Arabia"
+
+msgid "Seychelles"
+msgstr "Seychellene"
+
+msgid "Slovakia (Slovak Republic)"
+msgstr "Slovakia (Slovakiske Republikk)"
+
+msgid "Solomon Islands"
+msgstr "Solomon-Øyene"
+
+msgid "South Africa"
+msgstr "Sør-Afrika"
+
+msgid "South Georgia and the South Sandwich Islands"
+msgstr "Sør-Georgia og Sør-Sandwich-Øyene"
+
+msgid "Spain"
+msgstr "Spania"
+
+msgid "St. Pierre and Miquelon"
+msgstr "St. Pierre og Miquelon"
+
+msgid "Suriname"
+msgstr "Surinam"
+
+msgid "Sweden"
+msgstr "Sverige"
+
+msgid "Switzerland"
+msgstr "Sveits"
+
+msgid "Syrian Arab Republic"
+msgstr "Den Syriske Arabiske Republikk"
+
+msgid "Tajikistan"
+msgstr "Tadsjikistan"
+
+msgid "Trinidad and Tobago"
+msgstr "Trinidad og Tobago"
+
+msgid "Turkey"
+msgstr "Tyrkia"
+
+msgid "Turks and Caicos Islands"
+msgstr "Turks-og Caicosøyene"
+
 msgid "Ukraine"
 msgstr "Ukraina"
 
+msgid "United Arab Emirates"
+msgstr "Forente Arabiske Emirater"
+
+msgid "United Kingdom"
+msgstr "Storbritannia"
+
 msgid "United States"
 msgstr "USA"
+
+msgid "United States Minor Outlying Islands"
+msgstr "De Forente Staters Mindre Utenforliggende Øyer"
+
+msgid "Uzbekistan"
+msgstr "Usbekistan"
+
+msgid "Vatican City State (Holy See)"
+msgstr "Vatikanstaten (Den Hellige Stol)"
+
+msgid "Virgin Islands (British)"
+msgstr "Jomfruøyene (Britisk)"
+
+msgid "Virgin Islands (U.S.)"
+msgstr "Jomfruøyene (USA)"
+
+msgid "Wallis and Futuna Islands"
+msgstr "Wallis og Futuna Øyene"
+
+msgid "Western Sahara"
+msgstr "Vest-Sahara"
+
+msgid "Yemen"
+msgstr "Jemen"
 
 msgid "Yugoslavia"
 msgstr "Jugoslavia"
@@ -192,11 +465,26 @@ msgstr "Ekstra"
 msgid "Delete"
 msgstr "Slett"
 
+msgid "Merge"
+msgstr "Flette"
+
 msgid "Edit"
 msgstr "Redigere"
 
+msgid "Recover"
+msgstr "Gjenopprette"
+
 msgid "Not Public"
 msgstr "Ikke Offentlig"
+
+msgid "Merge with %d other"
+msgstr "Flette med %d andre"
+
+msgid "The address has not been accepted to this group yet."
+msgstr "Adressen er ikke blitt akseptert til denne gruppen ennå."
+
+msgid "Do you want to manually accept it?"
+msgstr "Ønsker du å manuelt akseptere det?"
 
 msgid "Do you want to send it again?"
 msgstr "Ønsker du å sende den på nytt?"
